# deez-stats

./: Cargo.toml  LICENSE  README.md  auth.php  data.php  display.php  index.php  terms.php  wrangler.toml
css/: display.css  style.css
js/: script.js
public/: index.html  view.html
public/css/: style.css  view.css
public/js/: home.js  view.js
src/: lib.rs  models.rs
