[package]
name = "deez-stats-worker"
version = "2.0.0"
authors = ["Peter Wetherall"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11.10", features = ["json"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["js", "v4"]}
url = "2.3.1"
worker = "0.0.16"

[profile.release]
opt-level = "s"
